--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "beefy app.js:bundle.js --open --live -- -t brfs",
+    "start": "beefy app.js:bundle.js --open --live -- --insert-global-vars __filename,__dirname,process,Buffer,global,__templateFiles -t brfs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
